GNOME Bugzilla – Bug 658207
glib-compile-schemas says "can not"
Last modified: 2011-09-10 14:37:26 UTC
#: ../gio/glib-compile-schemas.c:884 msgid "can not add keys to a 'list-of' schema" "cannot", please, but not until after 2.30.0.
The following fix has been pushed: ec3653b glib-compile-schemas: Pedantic string fixes
Created attachment 196176 [details] [review] glib-compile-schemas: Pedantic string fixes Replace 'can not' by 'cannot' in several places. String change!